Truncate the iteration name (fixes #831)

--- a/src/app/iteration/iteration.component.scss
+++ b/src/app/iteration/iteration.component.scss
@@ -43,6 +43,9 @@
 .iteration-subheader {
   display: flex;
   justify-content: space-between;
+  .iteration-name {
+    max-width: 80%;
+  }
 }
 .iteration-expanded-div {
   padding-left: 0;
